--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "start": "sirv public --no-clear",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest src --config jest.config.json",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -15,7 +17,13 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "jest": "^27.0.0",
+    "rollup-jest": "^1.1.3",
+    "svelte-jester": "^2.0.1",
+    "@testing-library/svelte": "^3.0.0",
+    "@testing-library/jest-dom": "^5.14.0",
+    "@types/testing-library__jest-dom": "^5.14.0"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
